--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tokyo-free-black-nextjs-admin-dashboard-js",
+  "name": "Geolocalisation",
   "version": "1.0.0",
-  "title": "Tokyo Free Black NextJS Javascript Admin Dashboard",
+  "title": "Geolocalisation",
   "description": "High performance React template built with lots of powerful MUI (Material-UI) components across multiple product niches for fast & perfect apps development processes",
   "author": {
     "name": "BloomUI.com",
