--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "1.1.1",
     "context-api": "0.0.2",
     "date-fns": "2.28.0",
+    "leaflet": "^1.9.4",
     "next": "12.1.6",
     "next-images": "1.8.4",
     "nprogress": "0.2.0",
@@ -29,7 +30,9 @@
     "react": "17.0.2",
     "react-apexcharts": "1.4.0",
     "react-custom-scrollbars-2": "4.4.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7"
   },
   "scripts": {
     "dev": "next",
