--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": false,
   "dependencies": {
+    "@coreui/react": "^5.0.0",
     "@emotion/cache": "11.7.1",
     "@emotion/react": "11.9.0",
     "@emotion/server": "11.4.0",
@@ -18,7 +19,9 @@
     "@mui/lab": "5.0.0-alpha.84",
     "@mui/material": "5.8.2",
     "@mui/styles": "5.8.0",
+    "@next/font": "^14.2.3",
     "apexcharts": "3.35.3",
+    "axios": "^1.7.2",
     "clsx": "1.1.1",
     "context-api": "0.0.2",
     "date-fns": "2.28.0",
@@ -32,10 +35,11 @@
     "react-custom-scrollbars-2": "4.4.0",
     "react-dom": "17.0.2",
     "react-router-dom": "^6.23.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "tailwindcss": "^3.4.3"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "export": "next export",
@@ -44,6 +48,7 @@
     "format": "prettier --write \"./**/*.{js,jsx,json}\" --config ./.prettierrc"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.5.0",
